<resources>
    <string name="app_name">GHSwag</string>

    <string name="user_name_hint">Enter Github Username</string>
    <string name="show_swag">Show Swag</string>

    <string name="user_not_found">Github user not found. Please check the username.</string>

    <string name="name">Name:</string>
    <string name="user_name">Username:</string>
    <string name="location">Location:</string>
    <string name="user_pp">Github user display picture</string>
    <string name="joined_interval">%1d years, %1d months ago.</string>
    <string name="followers">Followers:</string>
    <string name="number">%3d</string>
    <string name="following">Following:</string>

    <!--menu items-->
    <string name="menu_profile">Profile</string>
    <string name="menu_stats">Stats</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
