<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/ctl"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/gh_user_display_pic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/user_pp"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/tb"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize">

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_padding_size_small">

                <TextView
                    android:id="@+id/tv_user_name"
                    style="@style/textMediumPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    app:layout_constraintLeft_toRightOf="parent" />

                <TextView
                    android:id="@+id/gh_user_username"
                    style="@style/textMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="userName"
                    app:layout_constraintLeft_toRightOf="@id/guideline" />

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/textMediumPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    app:layout_constraintTop_toBottomOf="@id/tv_user_name" />

                <TextView
                    android:id="@+id/gh_user_name"
                    style="@style/textMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ravi Garbuja"
                    app:layout_constraintLeft_toRightOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/gh_user_username" />

                <TextView
                    android:id="@+id/tv_location"
                    style="@style/textMediumPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    app:layout_constraintTop_toBottomOf="@id/tv_name" />

                <TextView
                    android:id="@+id/gh_user_location"
                    style="@style/textMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nepal"
                    app:layout_constraintLeft_toRightOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/gh_user_name" />

                <TextView
                    android:id="@+id/tv_joined"
                    style="@style/textMediumPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Joined:"
                    app:layout_constraintTop_toBottomOf="@id/tv_location" />

                <TextView
                    android:id="@+id/gh_user_joined_date"
                    style="@style/textMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/gh_user_location" />

                <TextView
                    android:id="@+id/tv_followers"
                    style="@style/textMediumPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    app:layout_constraintTop_toBottomOf="@id/tv_joined" />

                <TextView
                    android:id="@+id/gh_user_no_of_followers"
                    style="@style/textMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    app:layout_constraintLeft_toRightOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/gh_user_joined_date" />

                <TextView
                    android:id="@+id/tv_following"
                    style="@style/textMediumPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    app:layout_constraintTop_toBottomOf="@id/tv_followers" />

                <TextView
                    android:id="@+id/gh_user_no_of_following"
                    style="@style/textMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    app:layout_constraintLeft_toRightOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/gh_user_no_of_followers" />

                <TextView
                    android:id="@+id/tv_bio"
                    style="@style/textMediumPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="BIO"
                    app:layout_constraintTop_toBottomOf="@id/tv_following" />

                <TextView
                    android:id="@+id/gh_user_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/well_color"
                    android:textColor="@color/iconPrimary"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_marginTop="@dimen/margin_padding_size_small"
                    app:layout_constraintTop_toBottomOf="@id/tv_bio" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3" />

                <ProgressBar
                    android:id="@+id/profile_progressbar"
                    android:indeterminate="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintRight_toLeftOf="parent"
                    android:visibility="invisible"/>


            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>